--- a/Heroes3Editor/MainWindow.xaml
+++ b/Heroes3Editor/MainWindow.xaml
@@ -51,15 +51,30 @@
             <Button HorizontalAlignment="Left" Command="ApplicationCommands.Save">
                 <Image Source="/Resources/VS2019/Save_16x.png" Width="16" Height="16"></Image>
             </Button>
-            <Separator></Separator>
+            <Separator />
             <TextBlock Name="langTxtCaption" HorizontalAlignment="Right" VerticalAlignment="Center">Game Lang:</TextBlock>
             <ComboBox Name="langCboBox" ItemsSource="{Binding Source={StaticResource constants}, Path=Lang}"
                       Width="40" Margin="5,0,5,0" IsEditable="False" IsEnabled="True" SelectionChanged="UpdateLangData"></ComboBox>
-            <Separator></Separator>
+            <Separator />
             <TextBlock Name="heroTxtCaption" HorizontalAlignment="Right" VerticalAlignment="Center">Search Hero:</TextBlock>
             <ComboBox Name="heroCboBox" ItemsSource="{Binding Source={StaticResource constants}, Path=Heroes}"
                       Width="110" Margin="5,0,5,0" IsEditable="True" IsEnabled="False"></ComboBox>
             <Button Name="heroSearchBtn" IsEnabled="False" Click="SearchHero" ToolTip="Search Hero">
+                <Image Source="/Resources/VS2019/Search_16x.png" Width="16" Height="16"></Image>
+            </Button>
+            <Separator />
+            <TextBlock Name="TownTxtCaption" HorizontalAlignment="Right" VerticalAlignment="Center">Town:</TextBlock>
+            <ComboBox Name="TownCboBox" Width="150" Margin="5,0,5,0" IsEditable="True" IsEnabled="False">
+                <ComboBox.ItemTemplate>
+                    <DataTemplate DataType="{x:Type local:Town}">
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock FontWeight="Bold" Width="120" Text="{Binding Path=Name}" />
+                            <TextBlock FontStyle="Italic" HorizontalAlignment="Right" Text="{Binding Path=Faction}" />
+                        </StackPanel>
+                    </DataTemplate>
+                </ComboBox.ItemTemplate>
+            </ComboBox>
+            <Button Name="TownSearchBtn" IsEnabled="True" Click="TownSearchBtn_Click" ToolTip="Search Town">
                 <Image Source="/Resources/VS2019/Search_16x.png" Width="16" Height="16"></Image>
             </Button>
         </ToolBar>
