--- a/Heroes3Editor/SelectSpell.xaml
+++ b/Heroes3Editor/SelectSpell.xaml
@@ -5,7 +5,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:Heroes3Editor"
         mc:Ignorable="d"
-        Title="Select Spell" Height="45" Width="300"
+        Title="{DynamicResource modal_SelectSpell}" Height="64" Width="300"
         MinHeight="45"
         MinWidth="300"
         SizeToContent="WidthAndHeight"
@@ -40,7 +40,7 @@
         
         <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal" HorizontalAlignment="Right">
             <ComboBox Name="ComboBoxSpells" Width="200" />
-            <Button x:Name="BtnSelect" Click="BtnSelect_OnClick" Content="Select" /> 
+            <Button x:Name="BtnSelect" Click="BtnSelect_OnClick" Content="{DynamicResource modal_Select}" /> 
         </StackPanel>
     </Grid>
 </Window>
