translated some modal messages
- fixed towns factions when changes game lang data
- added app version

--- a/Heroes3Editor/MainWindow.xaml
+++ b/Heroes3Editor/MainWindow.xaml
@@ -75,7 +75,7 @@
                     <DataTemplate DataType="{x:Type local:Town}">
                         <StackPanel Orientation="Horizontal">
                             <TextBlock FontWeight="Bold" Width="120" Text="{Binding Path=Name}" />
-                            <TextBlock FontStyle="Italic" HorizontalAlignment="Right" Text="{Binding Path=Faction}" />
+                            <TextBlock FontStyle="Italic" HorizontalAlignment="Right" Text="{Binding Path=FactionLang}" />
                         </StackPanel>
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
